plugins/libsinglefileplugin/singlefileplugin.cpp
@@ -108,6 +108,7 @@ bool LibSingleFileInterface::list()
     Kerfuffle::Archive::Entry *e = new Kerfuffle::Archive::Entry();
     connect(this, &QObject::destroyed, e, &QObject::deleteLater);
     e->setProperty("fullPath", uncompressedFileName());
+    e->setProperty("compressedSize", QFileInfo(filename()).size());
     emit entry(e);
 
     return true;
